--- a/src/app/components/home/register/register.component.css
+++ b/src/app/components/home/register/register.component.css
@@ -1,159 +1,81 @@
-.inicio {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: flex-end; /* Aligning content to the left */
-    align-items: center;
+.pantalla {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     height: 100vh;
-    background-color: #f0f0f0; /* Setting a background color for visualization */
 }
 
-.rounded-button {
-    background-color: #434982;
-    color: #ffffff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 20px; /* Adjust the value to change the roundness */
-    cursor: pointer;
-    font-size: 18px;
-    text-decoration: none; 
+.izquierda {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    background: linear-gradient(213.58deg, #01D28E 3.95%, #434982 24.82%, #434982 71.13%, #730068 93.06%);
 }
 
-.rounded-button:hover {
-    background-color: #2e2e62; /* Darker shade on hover */
+.izq-arriba {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-form {
-    position: absolute;
-    top: 40%;
-    left: 75%;
-    transform: translate(-50%, -50%);
+.izq-abajo {
+    color: white;
+    margin: 5%;
+}
+
+.derecha {
+    display: grid;
+    grid-template-rows: 0.5fr 0.5fr 0.5fr;
     
 }
-label, input[type="email"], input[type="password"], input[type="submit"] {
-        font-size: 18px;
+
+.der-arriba {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-.app-name {
+.der-medio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.der-abajo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.titulo {
     font-family: 'Inria Sans', sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 8vh;
-    line-height: 115px;
-    position: absolute;
-    top: 6%;
-    left: 75%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+    font-size: 12vh;
+    line-height: 1.15;
+    margin-top: 10%;
     background: linear-gradient(100.4deg, #01D28E 11.14%, #434982 50.34%, #730068 89.55%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
 }
 
-.description {
-    color: white;
-    font-size:  calc(0.5vh + 1vw);
-    margin: 0 60px 100px 60px;
-    text-align: justify;
-    font-family: 'Inria Sans', sans-serif;
-}
-
-
-@media (max-width: 1000px) {  /* Removes the app name at a certain minimum size*/
-    .app-name {
-        display: none;
-    }
-}
-
-@media (max-height: 450px) {  /* Removes the app name at a certain minimum size*/
-    .app-name {
-        display: none;
-    }
-}
-
-@media (max-width: 700px) {  /* Removes the app name at a certain minimum size*/
-    .description {
-        display: none;
-    }
-}
-
-
-@media (max-height: 350px) {  /* Removes the app name at a certain minimum size*/
-    .description {
-        display: none;
-    }
-}
-.rectangleBar {
-    position: absolute;
-    width: 449px;
-    height: 1124px;
-    left: 0px;
-    top: 0px;
-    background: linear-gradient(213.58deg, #01D28E 3.95%, #434982 24.82%, #434982 71.13%, #730068 93.06%);
-    color: white;
-}
-
-.upperRectangle {
-  position: absolute;
-  width: 1279px;
-  height: 12px;
-  left: 449px;
-  top: 86px;
-  background: linear-gradient(251.18deg, #730068 28.25%, #434982 37.09%, #434982 56.69%, #01D28E 65.98%);
-}
-
-.bar-paragraph {
-    position: relative;
-}
-
-.bar-paragraph::after {
-    content: "";
-    position: absolute;
-    height: 150%;
-    width: 3px;
-    background-color: black; /* Change color for special dividing bar */
-    top: 0;
-    right: -5px; /* Adjust this value as needed */
-}
-
-.title-paragraph {
-    text-align: center;
-    margin-left: 449px;
-    margin-top: 25px;
-    color: #434982;
-    font-size: 30px; /* Set font size to 40 */
-}
-
-mat-sidenav-container {
-    height: 100%;
-}
-  
-  mat-grid-list {
-    height: 100%;
-}
-  
-  mat-grid-tile {
+.formulario {
     display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.responsive-content {
-    overflow-y: auto; /* Allow vertical scrolling if content overflows */
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 30px;
 }
 
-.formStyle{
-    position: fixed;
-    margin-top: 4%;
-    padding-right: 10px;
-    overflow-y: auto;  /* Ensures vertical overflow only */
-    overflow-x: auto;  /* Allows horizontal overflow if needed but prioritizes vertical scrolling */
-    box-sizing: border-box; /* Include padding and border in the element's total width and height */
-    height: 75vh;
+.desplegable {
+    margin-bottom: 5%;
+}
 
+/* Movil */
+@media only screen and (max-width: 600px) {
+    .pantalla { grid-template-columns: 1fr; grid-template-rows: 1fr 1fr; }
+    .izquierda { grid-template-columns: 1fr; grid-template-rows: 1fr 1fr; }
+}
+/* Tablet vertical */
+@media only screen and (max-width: 1200px) and (min-width: 601px) {
+    .pantalla { grid-template-columns: 1fr; grid-template-rows: 1fr 1fr; }
+    .izquierda { grid-template-columns: 1fr 1fr; grid-template-rows: 1fr; }
 }
