--- a/src/app/components/user/sidebar/buscar-piso/buscar-piso.component.css
+++ b/src/app/components/user/sidebar/buscar-piso/buscar-piso.component.css
@@ -1,7 +1,3 @@
-/* .fijo {} 
-
-.desplazable {} */
-
 .title {
     text-align: center;
     margin-top: 1%;
@@ -19,4 +15,8 @@
 
 .example-form-field {
     width: 100%;
+}
+
+.barra {
+    margin-top: 1%;
 }
