--- a/src/app/components/user/sidebar/buscar-piso/buscar-piso.component.html
+++ b/src/app/components/user/sidebar/buscar-piso/buscar-piso.component.html
@@ -1,24 +1,23 @@
-<div class="fijo">
-    <mat-grid-list cols="11" rowHeight="2:1">
-        <mat-grid-tile colspan="1"><mat-icon style="margin-top: 15%;" (click)="goBack()">arrow_back_ios</mat-icon></mat-grid-tile>
-        <mat-grid-tile colspan="9"><h1 class="title" style="margin-top: 3%;">BUSCAR PISO</h1></mat-grid-tile>
-    </mat-grid-list>
-    
-    <hr class="linea-title">
-</div>
+<mat-grid-list cols="11" rowHeight="2:1">
+    <mat-grid-tile colspan="1"><mat-icon style="margin-top: 15%;"
+            (click)="goBack()">arrow_back_ios</mat-icon></mat-grid-tile>
+    <mat-grid-tile colspan="9">
+        <h1 class="title" style="margin-top: 3%;">BUSCAR PISO</h1>
+    </mat-grid-tile>
+</mat-grid-list>
 
-<div class="desplazable">
-    <mat-grid-list cols="6" rowHeight="2:1">
-        <mat-grid-tile colspan="1" (click)="buscar()">
-            <mat-icon>search</mat-icon>
-        </mat-grid-tile>
-        <mat-grid-tile colspan="4">
-            <mat-form-field class="example-form-field" >
-                <mat-label>Buscar</mat-label>
-                <input matInput type="text" [(ngModel)]="value" (ngModelChange)="buscar()">
-            </mat-form-field>
-        </mat-grid-tile>
-    </mat-grid-list>
+<hr class="linea-title">
 
-    <router-outlet></router-outlet>
-</div>
+<mat-grid-list cols="6" [rowHeight]="rowHeightBusc" class="barra">
+    <mat-grid-tile colspan="1" (click)="buscar()">
+        <mat-icon>search</mat-icon>
+    </mat-grid-tile>
+    <mat-grid-tile colspan="4">
+        <mat-form-field class="example-form-field">
+            <mat-label>Buscar</mat-label>
+            <input matInput type="text" [(ngModel)]="value" (ngModelChange)="buscar()">
+        </mat-form-field>
+    </mat-grid-tile>
+</mat-grid-list>
+
+<router-outlet></router-outlet>
