--- a/src/app/components/user/sidebar/contact-us/contact-us.component.css
+++ b/src/app/components/user/sidebar/contact-us/contact-us.component.css
@@ -1,5 +1,3 @@
-/* .fijo {} */
-
 .desplazable {
     margin-left: 5%;
     margin-right: 5%;
@@ -38,4 +36,8 @@
 .img {
     width: 80%;
     margin: 1%;
+}
+
+@media only screen and (max-width: 1200px) {
+    .img { width: 30%; }
 }
