--- a/src/app/components/user/sidebar/faq/faq.component.html
+++ b/src/app/components/user/sidebar/faq/faq.component.html
@@ -1,25 +1,30 @@
 <div class="fijo">
-    <mat-grid-list cols="11" rowHeight="2:1">
-        <mat-grid-tile colspan="1"><mat-icon style="margin-top: 15%;" (click)="goBack()">arrow_back_ios</mat-icon></mat-grid-tile>
-        <mat-grid-tile colspan="9">
-            <h1 class="title" style="margin-top: 3%;">FAQ</h1>
-        </mat-grid-tile>
-    </mat-grid-list>
+  <mat-grid-list cols="11" rowHeight="2:1">
+    <mat-grid-tile colspan="1"><mat-icon style="margin-top: 15%;"
+        (click)="goBack()">arrow_back_ios</mat-icon></mat-grid-tile>
+    <mat-grid-tile colspan="9">
+      <h1 class="title" style="margin-top: 3%;">FAQ</h1>
+    </mat-grid-tile>
+  </mat-grid-list>
 
-    <hr class="linea-title">
+  <hr class="linea-title">
 </div>
+
+<mat-paginator [length]="preguntasFrecuentes.length" [pageSize]="pageSize"
+  (page)="getPaginatorData($event)"></mat-paginator>
 
 <div class="desplazable">
-    <div class="deplegable">
-        <mat-accordion>
-            <mat-expansion-panel *ngFor="let item of preguntasFrecuentes">
-              <mat-expansion-panel-header>
-                <mat-panel-title>
-                  {{ item.titulo }}
-                </mat-panel-title>
-              </mat-expansion-panel-header>
-              <p>{{ item.descripcion }}</p>
-            </mat-expansion-panel>
-          </mat-accordion>          
-    </div>
+    <mat-accordion>
+      <mat-expansion-panel *ngFor="let item of preguntasFrecuentes | slice: lowValue : highValue">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            {{ item.titulo }}
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <p>{{ item.descripcion }}</p>
+      </mat-expansion-panel>
+    </mat-accordion>
 </div>
+
+<mat-paginator [length]="preguntasFrecuentes.length" [pageSize]="pageSize"
+  (page)="getPaginatorData($event)"></mat-paginator>
