--- a/src/app/components/user/sidebar/mapa/mapa.component.css
+++ b/src/app/components/user/sidebar/mapa/mapa.component.css
@@ -1,4 +1,7 @@
-/* .fijo {} */
+.fijo {
+    display: flex;
+    align-items: center;
+}
 
 .desplazable {
     margin-left: 5%;
@@ -7,7 +10,7 @@
 
 .title {
     text-align: center;
-    margin-top: 1%;
+    margin-top: 3%;
     color: #434982;
     font-size: 210%;
 }
@@ -17,5 +20,10 @@
     height: 10px;
     background: linear-gradient(251.18deg, #730068 28.25%, #434982 37.09%, #434982 56.69%, #01D28E 65.98%);
     width: 100%;
-    margin: 20px 0;
+    margin: 5px 0;
+}
+
+/* Movil */
+@media only screen and (max-width: 600px) {
+    .title {font-size: 150%;}
 }
