--- a/src/app/components/user/sidebar/mapa/mapa.component.html
+++ b/src/app/components/user/sidebar/mapa/mapa.component.html
@@ -1,13 +1,12 @@
-<div class="fijo">
-    <mat-grid-list cols="11" rowHeight="2:1">
-        <mat-grid-tile colspan="1"><mat-icon style="margin-top: 15%;" (click)="goBack()">arrow_back_ios</mat-icon></mat-grid-tile>
-        <mat-grid-tile colspan="9">
-            <h1 class="title" style="margin-top: 3%;">MAPA - BUSQUEDA</h1>
-        </mat-grid-tile>
-    </mat-grid-list>
+<mat-grid-list cols="11" class="fijo">
+    <mat-grid-tile colspan="1"><mat-icon style="margin-top: 15%;"
+            (click)="goBack()">arrow_back_ios</mat-icon></mat-grid-tile>
+    <mat-grid-tile colspan="9">
+        <h1 class="title">MAPA - BUSQUEDA</h1>
+    </mat-grid-tile>
+</mat-grid-list>
 
-    <hr class="linea-title">
-</div>
+<hr class="linea-title">
 
 <div class="desplazable">
     <router-outlet></router-outlet>
