--- a/src/app/components/user/sidebar/notificaciones/notificaciones.component.css
+++ b/src/app/components/user/sidebar/notificaciones/notificaciones.component.css
@@ -1,5 +1,3 @@
-/* .fijo {} */
-
 .desplazable {
     margin-left: 5%;
     margin-right: 5%;
@@ -25,4 +23,17 @@
     height: 90%;
     background: rgba(67, 73, 130, 0.8);
     border-radius: 10px;
+}
+
+.post-content {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    color: white;
+}
+
+/* Movil */
+@media only screen and (max-width: 600px) {
+    .post-content {display: none;}
 }
