--- a/src/app/components/user/sidebar/notificaciones/notificaciones.component.html
+++ b/src/app/components/user/sidebar/notificaciones/notificaciones.component.html
@@ -1,34 +1,35 @@
-<div class="fijo">
-    <mat-grid-list cols="11" rowHeight="2:1">
-        <mat-grid-tile colspan="1"><mat-icon style="margin-top: 15%;"
-                (click)="goBack()">arrow_back_ios</mat-icon></mat-grid-tile>
-        <mat-grid-tile colspan="9">
-            <h1 class="title" style="margin-top: 3%;">NOTIFICACIONES</h1>
-        </mat-grid-tile>
-    </mat-grid-list>
+<mat-grid-list cols="11" rowHeight="2:1">
+    <mat-grid-tile colspan="1"><mat-icon style="margin-top: 15%;"
+            (click)="goBack()">arrow_back_ios</mat-icon></mat-grid-tile>
+    <mat-grid-tile colspan="9">
+        <h1 class="title" style="margin-top: 3%;">NOTIFICACIONES</h1>
+    </mat-grid-tile>
+</mat-grid-list>
 
-    <hr class="linea-title">
-</div>
+<hr class="linea-title">
 
-<div class="desplazable">
-    <mat-grid-list cols="2" rowHeight="3:1">
-        <mat-grid-tile *ngFor="let notificacion of notificaciones">
-            <mat-card class="post" [style.background-color]="notificacion.color" (click)="notificacionLeida(notificacion.id, notificacion.color); openDialogVer('0ms', '0ms', notificacion.id)">
-                <mat-card-header>
-                    <mat-card-title-group>
-                        <mat-card-title style="color: white;">
-                            {{ notificacion.titulo }}
-                            <hr style="border-color: white;">
-                        </mat-card-title>
-                        <mat-card-subtitle style="color: white;">
-                            {{ notificacion.subtitulo }}
-                        </mat-card-subtitle>
-                    </mat-card-title-group>
-                </mat-card-header>
-                <mat-card-content style="color: white;">
-                    {{ notificacion.cuerpo }}
-                </mat-card-content>
-            </mat-card>
-        </mat-grid-tile>
-    </mat-grid-list>
-</div>
+<mat-paginator [length]="notificaciones.length" [pageSize]="pageSize" (page)="getPaginatorData($event)"></mat-paginator>
+
+<mat-grid-list [cols]="numCols" [rowHeight]="rowHeight" (window:resize)='onResize($event)'>
+    <mat-grid-tile *ngFor="let notificacion of notificaciones | slice: lowValue : highValue">
+        <mat-card class="post" [style.background-color]="notificacion.color"
+            (click)="notificacionLeida(notificacion.id, notificacion.color)">
+            <mat-card-header>
+                <mat-card-title-group>
+                    <mat-card-title style="color: white;">
+                        {{ notificacion.titulo }}
+                        <hr style="border-color: white;">
+                    </mat-card-title>
+                    <mat-card-subtitle style="color: white;">
+                        {{ notificacion.subtitulo }}
+                    </mat-card-subtitle>
+                </mat-card-title-group>
+            </mat-card-header>
+            <mat-card-content class="post-content">
+                {{ notificacion.cuerpo }}
+            </mat-card-content>
+        </mat-card>
+    </mat-grid-tile>
+</mat-grid-list>
+
+<mat-paginator [length]="notificaciones.length" [pageSize]="pageSize" (page)="getPaginatorData($event)"></mat-paginator>
