--- a/src/app/components/user/sidebar/sidebar.component.css
+++ b/src/app/components/user/sidebar/sidebar.component.css
@@ -45,6 +45,7 @@
 .insignia {
     height: 30%;
     margin-left: 1%;
+    border-radius: 50%;
 }
 
 .reputacion {
@@ -53,4 +54,21 @@
     color: white;
     position: absolute;
     bottom: 0%;
+}
+
+.menu {
+    display: none;
+}
+
+/* Movil */
+@media only screen and (max-width: 600px) {
+    .example-sidenav1 { width: 100%; }
+    .example-sidenav2 { width: 10%; }
+    .example-sidenav-content { margin-left: 10%; }
+    .menu { display: flex; }
+}
+/* Tablet vertical */
+@media only screen and (max-width: 1200px) and (min-width: 601px) {
+    .example-sidenav1 { width: 35%; }
+    .example-sidenav-content { margin-left: 35%; }
 }
